Move ProgressMonitor in the common module